ui: fix overflow for long table name and .Title css (#974)

--- a/querybook/webapp/components/DataTableNavigator/DataTableHoverContent.scss
+++ b/querybook/webapp/components/DataTableNavigator/DataTableHoverContent.scss
@@ -5,4 +5,8 @@
         margin-bottom: 4px;
         margin-left: -2px;
     }
+
+    .DataTableHoverContent-name {
+        word-break: break-all;
+    }
 }
